--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ button:hover { background: #00000000; }
 
 @keyframes alarmFlash {
   0%   { background: black; }
-  30%  { background: #8b0000; } /* dunkles Rot */
-  60%  { background: #ff0000; } /* Alarm */
+  30%  { background: #ff9999; } /* dunkles Rot */
+  60%  { background: #ff6666; } /* Alarm */
   100% { background: black; }
 }
 </style>
