--- a/index.html
+++ b/index.html
@@ -198,30 +198,25 @@ button:hover { background: #00000000; }
   animation: none;
   pointer-events: none;
 }
-.system-blink {
-  animation: systemBlink 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+.system-retreat {
+  animation: systemRetreat 0.28s ease-in-out;
 }
 
-@keyframes systemBlink {
+@keyframes systemRetreat {
   0% {
+    transform: scale(1);
     opacity: 1;
     filter: blur(0px);
-    transform: scale(1);
   }
-  30% {
-    opacity: 0.5;
-    filter: blur(1.8px);
-    transform: scale(0.985);
-  }
-  70% {
-    opacity: 0.9;
-    filter: blur(0.6px);
-    transform: scale(0.995);
+  45% {
+    transform: scale(0.96);
+    opacity: 0.25;
+    filter: blur(1.5px);
   }
   100% {
+    transform: scale(1);
     opacity: 1;
     filter: blur(0px);
-    transform: scale(1);
   }
 }
 </style>
@@ -630,15 +625,16 @@ function wrongAttempt(msg = "Wrong") {
     return;
   }
 }
-function triggerWordChainAlarmReset(delay = 800){
-  if(stage !== 'word') return; // Nur in WordChain
+function systemRetreatBlink() {
+  const container = document.getElementById('gameContainer');
+  if (!container) return;
 
-  // 🔴 Alarm-Impuls
-  document.body.classList.add('system-blink');
+  container.classList.add('system-retreat');
 
   setTimeout(() => {
-    document.body.classList.remove('system-blink');
-  }, 600); // Dauer des Alarm-Impulses
+    container.classList.remove('system-retreat');
+  }, 300);
+}
 
   // 🔁 Reset nach kurzer Verzögerung
   setTimeout(() => {
