--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ if (
   word.toLowerCase().startsWith(blockedBase) &&
   word.length > blockedBase.length
 ) {
-  showWordError("Wrong");
+  wrongAttempt("Wrong");
   return;
 }
   if(word[0].toLowerCase()!==lastChar){showWordError("Wrong");return;}
@@ -595,7 +595,7 @@ if(possible.length === 0){
 }
 
 function wrongAttempt(msg = "Wrong") {
-  showWordError(msg);
+  wrongAttempt(msg);
   wrongAttempts++;
 
   if(wrongAttempts >= 4){
