--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ function showWordChainHint() {
   const hint = document.getElementById('wordHint');
   if (!hint) return;
 
-  hint.textContent = "Only the right words take you further";
+  hint.textContent = "Only right words take you further";
   hint.style.opacity = "1";
 
   // ⏳ nach 3 Sekunden leiser Reset
