--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@ function startWordChain(){
   <div id="wordHint" style="
     margin-top:15px;
     font-family:'Press Start 2P', cursive;
-    font-size:0.6em;
-    color:#808080;
+    font-size:0.7em;
+    color: white;
     min-height:18px;
     opacity:0;
     transition: opacity 0.5s;
