--- a/index.html
+++ b/index.html
@@ -946,10 +946,10 @@ treasure.onclick = (e) => {
   // Text anzeigen
   const msg = document.createElement('div');
   msg.textContent = "Welcome";
-  msg.style.position = 'none';
-  msg.style.top = '50%';
-  msg.style.left = '10%';
-  msg.style.transform = 'translate(-50%, -80%)';
+  msg.style.position = 'fixed';
+  msg.style.top = '10%';
+  msg.style.left = '50%';
+  msg.style.transform = 'translate(-50%, -50%)';
   msg.style.background = 'none';
   msg.style.color = 'white';
   msg.style.padding = '12px 20px';
