--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@ button:hover { background: #00000000; }
   <source src="att.7KmgCeoPRAfcm8wOdhsPirAp4NqHkg-VfXklv2c3BSk.MP4" type="video/mp4">
 </video>
   <script>
-  let gameReady = false; // 🔒 Spiel gesperrt beim Laden
   document.getElementById('startScreen').onclick = () => {
-  gameReady = true; // 🔓 Spieler ist bereit  
+      if (gameReady) return;
+  gameReady = true;
   document.getElementById('startScreen').style.display = 'none';
 };
     // ========================== TIP BUTTON LOGIC =========================
@@ -264,11 +264,10 @@ const tipButton = document.getElementById('tipButton');
 const cubeFace = tipButton.querySelector('.cube-face');
 
 // TIP BUTTON erst nach 9 Sekunden erscheinen lassen
-if (!gameReady) {
-    gameReady = true;
-    startIntroTimers();
- 
 setTimeout(() => {
+  if (gameReady) return;
+  gameReady = true;
+};
   tipButton.classList.add('show'); // Button kommt rein
 
   //  Würfel langsam rollen
@@ -423,6 +422,7 @@ let mathTimer=30, mathTimerInterval;
 let lastPlayerClick = 0; // Zeit des letzten Klicks
 const clickCooldown = 300; // 300 ms zwischen erlaubten Klicks
 let wrongAttempts = 0; // ✅ RICHTIG PLATZIERT
+let gameReady = false;
 function showWordError(text) {
   const message = document.getElementById('message');
   if (!message) return;
@@ -436,7 +436,8 @@ function showWordError(text) {
 }
 // ========================== WORD CHAIN ==========================
 function startWordChain(){
-  
+   if (gameReady) return;
+  gameReady = true;};
   stage='word';
   const container=document.getElementById('gameContainer');
   container.innerHTML=`
@@ -952,9 +953,8 @@ function showChromaticWin(){
 const treasure = document.getElementById('treasure');
 
 treasure.onclick = (e) => {
-  if (!gameReady) 
-    gameReady = true;
-    startIntroTimers();}
+ if (gameReady) return;
+  gameReady = true;};
  
   // Funken erzeugen
   for(let i=0; i<5; i++){
@@ -1006,9 +1006,8 @@ setTimeout(() => {
  
 };
 setTimeout(() => {
-  if (!gameReady) 
-    gameReady = true;
-    startIntroTimers();}
+   if (gameReady) return;
+  gameReady = true;};
 
   const btn = document.getElementById('startButton');
   if (btn) {
