--- a/index.html
+++ b/index.html
@@ -899,42 +899,48 @@ function showChromaticMessage(){
     text.style.opacity = "0";
   }, 3000);
 }
+
 function restartGame(){
   // ⏹ Alle Timer stoppen
   clearInterval(timerInterval);
   clearInterval(mathTimerInterval);
   clearInterval(chromaticTimerInterval);
   clearTimeout(uniformTimeout);
-  clearTimeout(hintTimeout); // falls Word Chain Hint Timer noch läuft
+  clearTimeout(hintTimeout);
 
-  // 🔑 Wichtige Variablen für ALLE Spiele zurücksetzen
+  // 🔑 ALLE wichtigen Variablen auf Anfang
   wrongAttempts = 0;
   gameOver = false;
   solved = false;
   correctMathCount = 0;
 
-  // ✅ Word Chain zurücksetzen
+  // Word Chain
   currentWord = '';
   usedWords = [];
   wordScore = 0;
 
-  // ✅ Tic-Tac-Toe zurücksetzen
+  // Tic-Tac-Toe
   board = [];
   ticScore = {player:0, ai:0, draw:0};
 
-  // ✅ Math Challenge zurücksetzen
+  // Math Challenge
   correctAnswer = 0;
 
-  // ⬆ Spielcontainer verstecken
+  // Chromatic Trial
+  solved = false;
+
+  // UI Status
+  uiStarted = false; // ← sehr wichtig, sonst startet Video/Tip-Button nicht richtig
+
+  // 🟢 Container leeren / ausblenden
   const container = document.getElementById('gameContainer');
   container.style.display = 'none';
-  container.innerHTML = ''; // Container leeren, damit altes Spiel weg ist
+  container.innerHTML = '';
 
-  // ⬆ Treasure wieder anzeigen
+  // 🟡 Flow-Bild und Treasure wieder anzeigen
   const startScreen = document.getElementById('startScreen');
   startScreen.style.display = 'flex';
 }
-
 function showChromaticWin(){
   const text = document.getElementById('chromaticWinText');
   if(!text) return;
@@ -949,7 +955,14 @@ const treasure = document.getElementById('treasure');
 
 treasure.onclick = (e) => {
   e.stopPropagation(); // 🔑 GANZ WICHTIG
+  // Startscreen ausblenden
+  const startScreen = document.getElementById('startScreen');
+  startScreen.style.display = 'none';
+  const container = document.getElementById('gameContainer');
+  container.style.display = 'flex';
 
+  // Reset UI Sequence damit Video & Tip Button neu starten
+  startUISequence(true); // true → erzwinge Neustart
   // Startscreen ausblenden
   document.getElementById('startScreen').style.display = 'none';
   document.getElementById('gameContainer').style.display = 'flex';
@@ -1004,8 +1017,8 @@ setTimeout(() => {
  
 };
 
-function startUISequence() {
-  if (uiStarted) return; // 🔒 nur einmal
+function startUISequence(force=false) {
+  if(uiStarted && !force) return;
   uiStarted = true;
 
   // TIP BUTTON nach 30s
