--- a/index.html
+++ b/index.html
@@ -930,6 +930,9 @@ function restartGame(){
   correctAnswer = 0;
   correctMathCount = 0;
 
+  ghostRestartPending = false;
+  ghostVisible = false;
+  
   // Spiel ausblenden
   document.getElementById('gameContainer').style.display = 'none';
 
