--- a/index.html
+++ b/index.html
@@ -169,17 +169,9 @@ button:hover { background: #00000000; }
   z-index: 3000;
 }
 #startScreen img {
-  pointer-events: none;
-  z-index: 1;
   max-width: 90%;
-  max-height: 90%;
-  width: auto;
   height: auto;
-}
-
-#treasure {
-  z-index: 5000;
-  pointer-events: auto;
+  cursor: pointer;
 }
 
   @keyframes pulse {
@@ -277,14 +269,8 @@ button:hover { background: #00000000; }
   <source src="att.7KmgCeoPRAfcm8wOdhsPirAp4NqHkg-VfXklv2c3BSk.MP4" type="video/mp4">
 </video>
   <script>
-const treasure = document.getElementById('treasure');
-const ghost = document.getElementById('ghostRestartTreasure');
-startButton.onclick = () => {
-  document.getElementById('startScreen').style.display = 'none';
-  document.getElementById('gameContainer').style.display = 'flex';
 
-  startWordChain();
-};
+
     // ========================== TIP BUTTON LOGIC =========================
 const tipButton = document.getElementById('tipButton');
 const cubeFace = tipButton.querySelector('.cube-face');
@@ -926,23 +912,30 @@ function showChromaticMessage(){
     text.style.opacity = "0";
   }, 3000);
 }
-function restartGame() {
+function restartGame(){
   clearInterval(chromaticTimerInterval);
   clearInterval(mathTimerInterval);
   clearTimeout(uniformTimeout);
-
-  // Scores / States
-  wordScore = 0;
-  ticScore = 0;
-  correctMathCount = 0;
-  wrongAttempts = 0;
-
+  
+  wrongAttempts = 0; // 🔑 WICHTIG
+  
+  // Variablen zurücksetzen
   stage = 'start';
+  wordScore = 0;
+  ticScore = {player:0, ai:0, draw:0};
+  currentWord = '';
+  usedWords = [];
+  board = [];
+  gameOver = false;
+  correctAnswer = 0;
+  correctMathCount = 0;
 
-  // Nur Sichtbarkeit, KEIN Start
+  // Spiel ausblenden
   document.getElementById('gameContainer').style.display = 'none';
-  document.getElementById('startScreen').style.display = 'flex';
-}
+
+  // Flow-Bild anzeigen
+  const startScreen = document.getElementById('startScreen');
+  startScreen.style.display = 'flex';
     // 👻 GHOST ERSCHEINT ERST JETZT
 if (ghostRestartPending && !ghostVisible) {
   showGhostRestartTreasure();
@@ -964,7 +957,7 @@ function globalRestartFromTreasure() {
   restartGame();
 
   // 👻 Ghost zurücksetzen
-
+  const ghost = document.getElementById('ghostRestartTreasure');
   ghost.style.display = 'none';
   ghostRestartPending = false;
   ghostVisible = false;
@@ -979,7 +972,9 @@ function globalRestartFromTreasure() {
   uiStarted = false;
   startUISequence();
 }
-
+treasure.onclick = (e) => {
+  e.stopPropagation(); // 🔑 GANZ WICHTIG
+  globalRestartFromTreasure();
 
 // Funken erzeugen
   for(let i=0; i<5; i++){
