--- a/index.html
+++ b/index.html
@@ -201,6 +201,49 @@ button:hover { background: #00000000; }
 </style>
 </head>
 <body>
+<div id="dimensionModal" style="
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.95);
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  text-align: center;
+  z-index: 6001;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+">
+  <p>You have stepped outside the system.<br><br>
+     This space observes BrainTrials.</p>
+  <button id="closeDimension" style="
+    margin-top:20px;
+    padding:12px 20px;
+    border:none;
+    border-radius:12px;
+    background:white;
+    color:black;
+    font-family:'Press Start 2P', cursive;
+    cursor:pointer;
+  ">Close</button>
+</div>
+  <!-- Dimension Button über dem Copyright -->
+<button id="dimensionButton" style="
+  position: fixed;
+  bottom: 10px; /* leicht über ©2026 */
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px 15px;
+  border: none;
+  border-radius: 10px;
+  background: gold;
+  color: black;
+  font-family: 'Press Start 2P', cursive;
+  cursor: pointer;
+  z-index: 6000;
+">©2026</button>
   <!-- Ghost Restart Treasure (unsichtbar) -->
 <div id="ghostRestartTreasure" title="Restarting..." style="
     position: absolute;
@@ -269,7 +312,15 @@ button:hover { background: #00000000; }
   <source src="att.7KmgCeoPRAfcm8wOdhsPirAp4NqHkg-VfXklv2c3BSk.MP4" type="video/mp4">
 </video>
   <script>
+// Öffnen des Modals
+document.getElementById('dimensionButton').onclick = () => {
+  document.getElementById('dimensionModal').style.display = 'flex';
+};
 
+// Schließen des Modals
+document.getElementById('closeDimension').onclick = () => {
+  document.getElementById('dimensionModal').style.display = 'none';
+};
 
     // ========================== TIP BUTTON LOGIC =========================
 const tipButton = document.getElementById('tipButton');
