--- a/index.html
+++ b/index.html
@@ -224,13 +224,15 @@ button:hover { background: #00000000; }
     border-radius:12px;
     background:white;
     color:black;
-    font-family:'Press Start 2P', cursive;
-    cursor:pointer;
+     cursor:pointer;
   ">Close</button>
 </div>
   <!-- Dimension Button über dem Copyright -->
 <button id="dimensionButton" style="
-  position: fixed;
+   position: absolute;
+    top: 90%;
+    left: 10%;
+  
   bottom: 10px; /* leicht über ©2026 */
   left: 50%;
   transform: translateX(-50%);
