--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ button:hover { background: #00000000; }
 </div>
   <!-- Dimension Button über dem Copyright -->
 <button id="dimensionButton" style="
-   position: absolute;
+   position: none;
     top: 90%;
     left: 10%;
   
