--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@ button:hover { background: #00000000; }
   <!-- Dimension Button über dem Copyright -->
 <button id="dimensionButton" style="
    position: none;
-    top: 90%;
-    left: 10%;
+    top: 10%;
+    left: 90%;
   
   bottom: 10px; /* leicht über ©2026 */
-  left: 50%;
-  transform: translateX(-50%);
+  
+  transform: translate(-50%, -50%); 
   padding: 8px 15px;
   border: none;
   border-radius: 10px;
