--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ button:hover { background: #00000000; }
 <body>
    <!-- ©️2026 im Flow-Bild -->
 <div id="copyright" style="
+  display: none;
   position: absolute;
   top: 90%;
   left: 10%;
