--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,14 @@ function initStatePuzzle(){
     if(state.every(v=>v===0)){
       solved = true;
 
-     triggerGhostRestart();
+      wrapper.classList.add("hide");
+
+      setTimeout(() => {
+        wrapper.style.display = " none";
+      },1300);
+    }
+  }  
+    triggerGhostRestart();
       setTimeout(() => {
        restartGame();
         // 🔑 UI-Sequenz wieder erlauben
