--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,8 @@ solutionBtn.onclick = () => {
   alert("Klicke diese Zellen:\n" + solvePuzzle(state).join(", "));
 };
 
-render();   
+render(); {
+} 
   triggerGhostRestart();
       setTimeout(() => {
        restartGame();
