--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@ button:hover { background: #00000000; }
   display: flex;           /* Zahl zentrieren */
   align-items: center;
   justify-content: center;
-  font-size: 10px;         /* <- Zahl kleiner machen */
+  font-size: 8px;         /* <- Zahl kleiner machen */
   font-weight: bold;
-  color: white;
+  color: black;
 }
 
 #statePuzzleWrapper .cell.active {
