--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@ button:hover { background: #00000000; }
   font-weight: bold;
   cursor: pointer;
 }
-/* Button */
-solutionBtn.onclick = () => {
-  alert("Klicke diese Zellen:\n" + solvePuzzle(state).join(", "));
+#solutionBtn:hover {
+  background: #4CAF50;    /* optional Hover-Effekt */
+}
 </style>
 </head>
 <body>
@@ -1057,7 +1057,9 @@ function solvePuzzle(state) {
     .filter(Boolean);
 }
 
-
+/* Button */
+solutionBtn.onclick = () => {
+  alert("Klicke diese Zellen:\n" + solvePuzzle(state).join(", "));
 
 render();
 
