--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ button:hover { background: #00000000; }
     box-shadow: 0 0 10px 3px gold;
     animation: pulse 2s infinite;
   "></div>
-  <img src="IMG_1244.jpeg" alt="BrainTrials Logo">
+  <img src="att.ws3oFYvV4S6bScpgubaTsk89eU6FpgMM99usomgPChY.jpeg" alt="BrainTrials Logo">
 </div>
   <div id="gameContainer">
   <h1></h1>
