--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@ button:hover { background: #00000000; }
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: gold;
+    background: white;
     cursor: default;
     z-index: 4000;
-    box-shadow: 0 0 10px 3px gold;
+    box-shadow: 0 0 10px 3px white;
     animation: pulse 2s infinite;
     display: none;
 "></div>
